# sim-setter

./: .gitignore  LICENSE  README.md  build-linux.sh  build.ps1  pyproject.toml  requirements.txt  run_gui.py
.github/workflows/: build.yml
sim_setter/: core.py  gui.py
