[project]
name = "sim-setter"
version = "0.1.0"
description = "Standalone GUI for applying +/-9 ms offsets to StepMania simfiles."
requires-python = ">=3.9"
dependencies = [
    "simfile>=2.1,<3",
    "wxPython>=4.2,<5",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=5",
]

[project.scripts]
sim-setter = "sim_setter.gui:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
